--- a/.github/workflows/main_tarkony.yml
+++ b/.github/workflows/main_tarkony.yml
@@ -58,4 +58,4 @@ jobs:
         with:
           app-name: 'Tarkony'
           slot-name: 'Production'
-          images: 'docker.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_8BF52709DF094B24AEE2889CF60FD311 }}/szabodaniel93/tarkony-react-frontend:${{ github.sha }}'
+          images: 'docker.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_8BF52709DF094B24AEE2889CF60FD311 }}/tarkony-react-frontend:${{ github.sha }}'
