--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage": "https://sz-daniel.github.io/Tarkony-react-frontend/",
   "name": "tarkony",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
@@ -29,6 +32,7 @@
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.25.0",
+    "gh-pages": "^6.3.0",
     "typescript": "^5.6.0",
     "vite": "^5.0.0"
   }
