--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     "outDir": "./dist"
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist", "plan", "junk/"]
+  "exclude": ["node_modules", "dist"]
 }
